maintainIT2/src/objects/Part_Transaction__c.object
<CustomObject>
    <description>Contains all the records for part transactions.</description>
    <fields>
        <fullName>Credit_Account__c</fullName>
        <description>Credit Account Typically Associated with Issue, Gain, or Shrink Inventory Transactions.  System populated via workflow.  Field security should be set to read only for all user profiles.</description>
        <inlineHelpText>Credit Account Typically Associated with Issue, Gain, or Shrink Inventory Transactions.  System populated via workflow.  Field security should be set to read only for all user profiles.</inlineHelpText>
        <label>Credit Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Debit_Account__c</fullName>
        <description>Debit Account Representing Expense Account Associated with Part Issues, Shrink, or Gain Transactions.  System populated via workflow.  Field security should be set to read only for all user profiles.</description>
        <inlineHelpText>Debit Account Representing Expense Account Associated with Part Issues, Shrink, or Gain Transactions.  System populated via workflow.  Field security should be set to read only for all user profiles.</inlineHelpText>
        <label>Debit Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PO Part - Populated via APEX Code.  Field security should be set to Read Only for all user profiles.</description>
        <inlineHelpText>PO Part</inlineHelpText>
        <label>PO Part</label>
        <referenceTo>PO_Part__c</referenceTo>
        <relationshipName>Part_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Part_Description__c</fullName>
        <description>Formula reference to the Part Description</description>
        <formula>Part__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula reference to the Part Description</inlineHelpText>
        <label>Part Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part__c</fullName>
        <description>Part ID</description>
        <inlineHelpText>Part ID</inlineHelpText>
        <label>Part</label>
        <referenceTo>Part__c</referenceTo>
        <relationshipName>Part_Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Purchase_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Purchase Order # - Populated via APEX Code. Field security should be set to Read Only for all user profiles.</description>
        <inlineHelpText>Purchase Order</inlineHelpText>
        <label>Purchase Order</label>
        <referenceTo>Purchase_Order__c</referenceTo>
        <relationshipName>Part_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Qty__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Transaction Qty measured in the Stock UOM.  Only non-negative integer values (whole numbers) are valid.</description>
        <inlineHelpText>&quot;Qty&quot; represents the transaction quantity.  Only non-negative integer values (whole numbers) are valid.</inlineHelpText>
        <label>Qty</label>
        <precision>7</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Secondary_Bin_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to Select the Secondary Bin Location. If Null, the On Hand Qty Adjustments only affect the Primary Bin Location</description>
        <inlineHelpText>Select the Secondary Bin Location. If left empty, the Part Transaction will default to the Primary Bin Location</inlineHelpText>
        <label>Secondary Bin Location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Warehouse_Bin_Location__c.Part__c</field>
                <operation>equals</operation>
                <valueField>$Source.Part__c</valueField>
            </filterItems>
            <filterItems>
                <field>Warehouse_Bin_Location__c.Primary_Bin__c</field>
                <operation>equals</operation>
                <value>No</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Warehouse_Bin_Location__c</referenceTo>
        <relationshipName>Part_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trans_Type_Num__c</fullName>
        <description>Formula Reference for a Transaction Type.  Gain = 1, Issue = 2, Receipt = 3, Order = 4, Shrink = 5</description>
        <formula>CASE( TEXT( Trans_Type__c ) , &quot;Gain&quot;, 1, &quot;Issue&quot;, 2, &quot;Receipt&quot;, 3, &quot;Order&quot;, 4, &quot;Shrink&quot;, 5, 6)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trans_Type_Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trans_Type__c</fullName>
        <description>Transaction types used to support calculation of all part qty&apos;s - DO NOT ADD TO or DELETE FROM this picklist.</description>
        <inlineHelpText>Transaction types used to support calculation of all part qty&apos;s - DO NOT ADD TO or DELETE FROM this picklist.</inlineHelpText>
        <label>Trans Type</label>
        <picklist>
            <picklistValues>
                <fullName>Gain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issue</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Receipt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shrink</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trans_Value__c</fullName>
        <description>Transaction Value = Part Unit Value * Transaction Qty</description>
        <formula>Unit_Value__c  *  Qty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Transaction Value = Part Unit Value * Transaction Qty</inlineHelpText>
        <label>Transaction Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Date of Transaction</description>
        <inlineHelpText>Date of Transaction</inlineHelpText>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unit_Value__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Part Unit Value for this transaction.  Automatically populated via workflow or APEX code.</description>
        <inlineHelpText>Part Unit Value for this transaction</inlineHelpText>
        <label>Unit Value</label>
        <precision>16</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WO_Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Work Order Part relating to this issue.  Is used to update the Issued Qty on the WO Part record.</description>
        <inlineHelpText>Work Order Part relating to this issue.  Is used to update the Issued Qty on the WO Part record.</inlineHelpText>
        <label>WO Part</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The Work Order Part record selected must be related to the previously selected Work Order</errorMessage>
            <filterItems>
                <field>WO_Part__c.Work_Order__c</field>
                <operation>equals</operation>
                <valueField>$Source.Work_Order__c</valueField>
            </filterItems>
            <filterItems>
                <field>WO_Part__c.Part__c</field>
                <operation>equals</operation>
                <valueField>$Source.Part__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>WO_Part__c</referenceTo>
        <relationshipName>Part_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Work Order</description>
        <inlineHelpText>Work Order # for tracking parts issues</inlineHelpText>
        <label>Work Order</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You may not issue to a Model Work Order</errorMessage>
            <filterItems>
                <field>Work_Order__c.Work_Order_Record_Type__c</field>
                <operation>notEqual</operation>
                <value>Model Work Order</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Work_Order__c</referenceTo>
        <relationshipName>Part_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Inventory Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PT-{0000000}</displayFormat>
        <label>Part Trans ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Transactions</pluralLabel>
    <recordTypes>
        <fullName>Inventory</fullName>
        <active>true</active>
        <description>Inventory Transactions</description>
        <label>Inventory</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_Update_Qty_during_Edit</fullName>
        <active>true</active>
        <description>Ensures that the Qty value is NOT changed during an edit</description>
        <errorConditionFormula>IF(ISNEW(), false,   PRIORVALUE( Qty__c )   &lt;&gt;  Qty__c )</errorConditionFormula>
        <errorDisplayField>Qty__c</errorDisplayField>
        <errorMessage>The transaction Qty cannot be edited once the record is created.  Please create a second entry.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Issue_Shrink_LE_Primary_Bin_Qty</fullName>
        <active>true</active>
        <description>Ensures that Part Transaction Qty for an Issue or Shrink Transaction does not exceed the On Hand Qty in that Part Bin Location</description>
        <errorConditionFormula>ISBLANK( Secondary_Bin_Location__c)  &amp;&amp; ( TEXT(  Trans_Type__c  ) = &quot;Issue&quot; || TEXT( Trans_Type__c ) = &quot;Shrink&quot; ) &amp;&amp;  Qty__c  &gt;  Part__r.Primary_Bin_Loc_OH_Qty__c</errorConditionFormula>
        <errorMessage>The Issue or Shrink Transaction Qty cannot exceed the On Hand Qty in the Primary Bin Location.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Issue_Shrink_LE_Secondary_Bin_Qty</fullName>
        <active>true</active>
        <description>Ensures that Part Transaction Qty for an Issue or Shrink Transaction does not exceed the On Hand Qty in the Secondary Part Bin Location</description>
        <errorConditionFormula>NOT(ISBLANK(Secondary_Bin_Location__c)) &amp;&amp; ( TEXT( Trans_Type__c ) = &quot;Issue&quot; || TEXT( Trans_Type__c ) = &quot;Shrink&quot; ) &amp;&amp; Qty__c &gt;  Secondary_Bin_Location__r.On_Hand_Qty__c</errorConditionFormula>
        <errorMessage>The Issue or Shrink Transaction Qty cannot exceed the On Hand Qty in the selected Secondary Bin Location.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OH_Qty_NonNegative</fullName>
        <active>true</active>
        <description>Ensures that no transactions result in a negative OH Qty</description>
        <errorConditionFormula>IF( ISNEW() , IF( Trans_Type_Num__c = 2 || Trans_Type_Num__c = 5,  Qty__c   &gt;   Part__r.On_Hand_Qty__c , False), false)</errorConditionFormula>
        <errorDisplayField>Qty__c</errorDisplayField>
        <errorMessage>The Transaction Qty is greater than the On Hand Qty and is attempting to result in a negative On Hand Qty.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Part_Transaction_Qty_is_positive</fullName>
        <active>true</active>
        <description>Ensures that the Transacton Qty is a positive number</description>
        <errorConditionFormula>IF( (Trans_Type_Num__c = 4 || Trans_Type_Num__c = 2) , false, Qty__c &lt;= 0)</errorConditionFormula>
        <errorDisplayField>Qty__c</errorDisplayField>
        <errorMessage>All Transaction Qty&apos;s must be positive values with the exception of an Issue Type transaction which represents a return to stock or an Order Type which represents a Cancellation of Current On Order Qty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Part_Transaction_Value_is_non_negative</fullName>
        <active>true</active>
        <description>Ensures that the Unit Value for the Part on this transaction is a non-negative value</description>
        <errorConditionFormula>Unit_Value__c  &lt; 0</errorConditionFormula>
        <errorDisplayField>Unit_Value__c</errorDisplayField>
        <errorMessage>Unit Value cannot be negative</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Part_and_WO_Part_Match</fullName>
        <active>true</active>
        <description>This validation rule ensures that the Part entered matches the Part on WO Part when WO Part number is entered</description>
        <errorConditionFormula>IF( WO_Part__c  &lt;&gt; Null, IF( Trans_Type_Num__c  = 2, WO_Part__r.Part__c  &lt;&gt;  Part__c, False), False)</errorConditionFormula>
        <errorDisplayField>WO_Part__c</errorDisplayField>
        <errorMessage>The WO Part line selected must match the Part being issued</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Primary_Bin_Not_Null</fullName>
        <active>false</active>
        <description>Ensures that the Primary Bin Location on a Part record is NOT Blank on all Transaction Types except Order when a Secondary Bin Location is NOT selected.</description>
        <errorConditionFormula>ISBLANK( Part__r.Primary_Bin_Location__c ) &amp;&amp;  ISBLANK( Secondary_Bin_Location__c )  &amp;&amp; NOT( ISPICKVAL( Trans_Type__c , &quot;Order&quot;) )</errorConditionFormula>
        <errorMessage>The Primary Bin Location for the Part record cannot be BLANK during any Part Transaction record entry UNLESS you select a Secondary Bin Location.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>WorkOrderRequiredForIssue</fullName>
        <active>true</active>
        <description>a validation to Part_Transaction such that if the Transaction Type = Issue , then the user must provide a Work Order #</description>
        <errorConditionFormula>AND(ISPICKVAL(Trans_Type__c,&quot;Issue&quot;) ,
      OR( ISBLANK(Work_Order__c  ), ISNULL( Work_Order__c  ))
)</errorConditionFormula>
        <errorDisplayField>Work_Order__c</errorDisplayField>
        <errorMessage>A Work Order # must be provided to Issue a Part</errorMessage>
    </validationRules>
</CustomObject>